# PA_ESGI_PYTHON

./: .gitignore  fingerprint.py  lfi_checker.py  main.py  pa_log.py  params_finder.py  pyproject.toml  requirements.txt  sql_checker.py  utils.py  xss_checker.py  xss_finder.py
src/pa_scanner/: __init__.py  __main__.py  events.py  fingerprint.py  main.py  pa_log.py  params_finder.py  rapport_gen.py  security_scanner.py  sql_checker.py  tree.py  utils.py
templates/: layout.html
wordlists/: parameters.txt
